--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "velocity-animate": "^1.2.3"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "electron": "^1.3.2",
-    "electron-compilers": "^3.1.6"
+    "electron-compilers": "^3.1.6",
+    "mocha": "^3.0.2",
+    "spectron": "^3.3.0"
   }
 }
